--- a/archive.njk
+++ b/archive.njk
@@ -1,12 +1,11 @@
 ---
 layout: layouts/home.njk
-permalink: /posts/
+permalink: /posapp/
 eleventyNavigation:
-  key: Archive
+  key: Applikasi
   order: 2
 ---
 
-<h1>Archive</h1>
-
+<h1><a href="/">Fitur Aplikasi Toko</a></h1>
 {% set postslist = collections.posts %}
 {% include "postslist.njk" %}
