--- a/css/index.css
+++ b/css/index.css
@@ -70,7 +70,11 @@ main {
   transition: transform 0.8s;
   transform-style: preserve-3d;
 }
-
+.cover {
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+}
 .flip-card:hover .flip-card-inner {
   transform: rotateY(180deg);
 }
@@ -87,7 +91,7 @@ main {
 }
 
 .flip-card-front {
-  background-color: #bbb;
+  background-color: rgb(32, 30, 30);
   color: black;
 }
 
@@ -114,4 +118,8 @@ main {
 }
 .info {
   margin-top: 18%;
+}
+a :button {
+  background-color: black;
+  color: white;
 }
