--- a/index.njk
+++ b/index.njk
@@ -15,5 +15,7 @@ eleventyNavigation:
 <p>{{home.text3}}</p>
 <h3><a href="/">{{home.full}}</a></h3>
 <p>{{home.text4}}</p>
+<h3><a href="/">{{home.pos}}</a></h3>
+<p>{{home.posi}}</p>
 <p>{{home.text5}}</p>
-<p><a href="{{home.link}}">{{home.text6}}</a></p>
+<p><a href="{{home.link}}" class="button">{{home.text6}}</a></p>
