--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -2,12 +2,15 @@
 layout: layouts/base.njk
 templateClass: tmpl-post
 ---
-<h1>{{ title }}</h1>
-<img src="{{ post.image }}"/>
-<time datetime="{{ page.date | htmlDateString }}">{{ page.date | readableDate }}</time>
+<h1><a href="{{page.url}}">{{ title }}</a></h1>
+<h2>{{description}}</h2>
+<div class="video">
+<iframe src="https://youtube.com/embed/{{video}}" alt="{{description}}"></iframe>
+</div>
+
 {%- for tag in tags | filterTagList -%}
 {%- set tagUrl %}/tags/{{ tag | slug }}/{% endset -%}
-<a href="{{ tagUrl | url }}" class="post-tag">{{ tag }}</a>
+<a href="{{ tagUrl | url }}" class="post-tag">#{{ tag }}</a>&nbsp;
 {%- endfor %}
 
 {{ content | safe }}
