--- a/css/index.css
+++ b/css/index.css
@@ -15,6 +15,7 @@ ul.breadcrumb {
   padding: 10px 26px;
   list-style: none;
   border-radius: 20px;
+  text-align: center;
   background-color: black;
 }
 ul.breadcrumb li {
@@ -24,7 +25,7 @@ ul.breadcrumb li {
 ul.breadcrumb li + li:before {
   padding: 8px;
   color: white;
-  content: '/\00a0';
+  content: '';
 }
 
 ul.breadcrumb li a {
@@ -50,6 +51,7 @@ ul.breadcrumb li a:hover {
   height: 100%;
   padding: 5px;
   background-color: black;
+  border-radius: 20px;
 }
 .flip-card {
   background-color: transparent;
@@ -61,6 +63,7 @@ ul.breadcrumb li a:hover {
 }
 main {
   font-size: 12px;
+  padding-bottom: 15px;
 }
 .flip-card-inner {
   position: relative;
@@ -117,9 +120,19 @@ main {
   border-radius: 20px;
 }
 .info {
-  margin-top: 18%;
+  margin-top: 8%;
 }
-a :button {
+.button {
   background-color: black;
+  padding: 10px 26px;
   color: white;
+  border-radius: 20px;
+}
+footer {
+  font-size: 10px;
+  text-align: center;
+  border-top: solid;
+}
+img {
+  border-radius: 20px;
 }
