--- a/tags-list.njk
+++ b/tags-list.njk
@@ -2,9 +2,10 @@
 permalink: /tags/
 layout: layouts/home.njk
 ---
-<h1>Tags</h1>
-
+<h1>HasTags</h1>
+<ul>
 {% for tag in collections.tagList | filterTagList %}
   {% set tagUrl %}/tags/{{ tag | slug }}/{% endset %}
-  <a href="{{ tagUrl | url }}" class="post-tag">{{ tag }}</a>
+  <li><a href="{{ tagUrl | url }}" class="post-tag">#{{ tag }}</a></li>
 {% endfor %}
+</ul>
