fix image for SEO

--- a/_includes/postslist.njk
+++ b/_includes/postslist.njk
@@ -4,11 +4,11 @@
   <div class="flip-card">
   <div class="flip-card-inner">
     <div class="flip-card-front">
-  <a href="{{ post.url | url }}">
-  <img src="{{ post.data.image }}" width="100%" height="100%" loading="lazy" class="cover"/>
+  <img src="{{ post.data.image }}" alt="{{post.data.description}}" width="100%" height="100%" loading="lazy" class="cover"/>
    </div>
     <div class="flip-card-back">
-  <h3>{% if post.data.title %}{{ post.data.title }}{% else %}<code>{{ post.url }}</code>{% endif %}</a></h3>
+  <h3>
+  <a href="{{ post.url | url }}">{% if post.data.title %}{{ post.data.title }}{% else %}<code>{{ post.url }}</code>{% endif %}</a></h3>
   <p>{{post.data.description}}</p>
     {% for tag in post.data.tags | filterTagList %}
       {% set tagUrl %}/tags/{{ tag | slug }}/{% endset %}
